# relatorio-efetivo-variavel

./: .gitignore  README.md
front/relatorioev/: README.md  package.json
front/relatorioev/src/: App.vue  main.js
front/relatorioev/src/assets/: global.css
front/relatorioev/src/components/: AddFATD.vue  AdicionarFO.vue  EvResultado.vue  FATD.vue  FatoObservado.vue  InputPesquisa.vue  LoginComponent.vue  LogoRelatorio.vue  LogoutComponent.vue  PopUpEv.vue  RegisterComponent.vue
front/relatorioev/src/plugins/: axios.js
front/relatorioev/src/router/: index.js
front/relatorioev/src/store/: aplicador.js  auth.js  index.js
front/relatorioev/src/views/: AuthView.vue  HomeView.vue
server/: .env  db.sqlite3  pyproject.toml  teste_bkp.json
server/core/: admin.py  models.py
server/core/migrations/: 0001_initial.py  0002_alter_efetivovariavel_foto_alter_fatd_data_and_more.py  0002_fatd_data_fatoobservado_data_alter_fatd_punicao_and_more.py  0003_alter_efetivovariavel_foto_alter_fatd_data_and_more.py  0004_efetivovariavel_data_nascimento.py  0005_alter_fatd_data_alter_fatoobservado_data.py
server/core/models/: Aplicador.py  EfetivoVariavel.py  FATD.py  FatoObservado.py  Ficha.py  __init__.py
server/core/serializers/: Aplicador.py  EfetivoVariavel.py  FATD.py  FatoObservado.py  Ficha.py  __init__.py
server/core/views/: Aplicador.py  EfetivoVariavel.py  FATD.py  FatoObservado.py  Ficha.py  __init__.py
server/relatorio/: asgi.py  settings.py  urls.py  wsgi.py
